refactored the orbit propagation hierarchy